Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20586

Mouse events on a removed object causes crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt3D TP2
    • Qt3D TP1
    • Qt3D
    • None
    • 4191c651126ba1f827817cdfe7fb8c3a0ce0b36b

    Description

      Mouse events on a removed object can cause a crash.

      viewport.cpp - entered object needs to be a guarded pointer.

      (from JD)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes