Fix for QTBUG-20586

Use a guarded pointer here.

Change-Id: Ib732b325e5dab67b3fecab789f1c2bccb4f336bd
Reviewed-on: http://codereview.qt-project.org/4718
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Julian de Bhal <julian.debhal@nokia.com>